[package]
name = "morrow"
version = "0.1.0"
edition = "2021"
description = "LLM-powered daily schedule planner with Google Tasks integration"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dotenvy = "0.15"
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
indexmap = { version = "2", features = ["serde"] }
url = "2"
dialoguer = "0.11"
